--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,27 +11,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    # Check out the code from GitHub
-    - name: Checkout code
-      uses: actions/checkout@v2
-      
-    # Set up JDK (for Maven builds)
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
-      with:
-        java-version: '11'
-        distribution: 'adoptopenjdk'
-    
-    # Cache Maven dependencies to speed up builds
-    - name: Cache Maven dependencies
-      uses: actions/cache@v2
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Zulu JDK 23
+        uses: actions/setup-java@v3
+        with:
+          java-version: '23'
+          distribution: 'zulu'
     
     # Run Style Analysis (e.g., using Checkstyle)
     - name: Run Checkstyle
