--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,17 @@
 name: CI/CD
 
 on:
-  workflow_dispatch:  # Allows manual triggering of the workflow
+  workflow_dispatch:
   push:
     branches:
       - main
   pull_request:
     branches:
       - main
-      
+
 permissions:
   contents: write
-  
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Needed to push to gh-pages
 
       - name: Set up Zulu JDK 23
         uses: actions/setup-java@v3
@@ -26,35 +28,37 @@ jobs:
           java-version: '23'
           distribution: 'zulu'
 
-      # Run Style Analysis (e.g., using Checkstyle)
       - name: Run Checkstyle
         run: mvn checkstyle:check
 
-      # Build the code (both release and debug)
       - name: Build project
         run: mvn clean install
 
-      # Run unit tests
       - name: Run tests
         run: mvn test
 
-      # Generate and publish Javadoc
       - name: Generate Javadoc
         run: mvn javadoc:javadoc
 
-      # Upload Javadoc to GitHub Pages (optional for publishing)
-      - name: Deploy Javadoc to GitHub Pages
+      - name: Prepare files for GitHub Pages
         run: |
-          rm -rf docs/database docs/menu docs/legal docs/resource-files docs/script-files
           mkdir -p docs
-          mv database legal menu resource-files script-files docs/
+          for dir in database legal menu resource-files script-files; do
+            if [ -d "$dir" ]; then
+              rm -rf "docs/$dir"
+              mv "$dir" docs/
+            fi
+          done
 
-      - name: Commit and push Javadoc to GitHub Pages
+      - name: Commit and push to gh-pages branch
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@users.noreply.github.com"
-          git add docs/*
-          git commit -m "Update Javadoc"
-          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} HEAD:gh-pages
+          git config user.name "github-actions"
+          git config user.email "github-actions@users.noreply.github.com"
+          git switch --orphan gh-pages || git checkout gh-pages
+          git rm -rf . > /dev/null 2>&1 || true
+          cp -r docs/* .
+          git add .
+          git commit -m "Deploy docs to GitHub Pages" || echo "Nothing to commit"
+          git push --force https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} HEAD:gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
