--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          fetch-depth: 0  # Needed to push to gh-pages
+          fetch-depth: 0  # Needed for pushing to gh-pages
 
       - name: Set up Zulu JDK 23
         uses: actions/setup-java@v3
@@ -40,25 +40,24 @@ jobs:
       - name: Generate Javadoc
         run: mvn javadoc:javadoc
 
-      - name: Prepare files for GitHub Pages
+      - name: Deploy Javadoc to GitHub Pages
+        if: success()
         run: |
-          mkdir -p docs
-          for dir in database legal menu resource-files script-files; do
-            if [ -d "$dir" ]; then
-              rm -rf "docs/$dir"
-              mv "$dir" docs/
-            fi
-          done
+          mkdir -p temp-docs
+          if [ -d "target/site/apidocs" ]; then
+            cp -r target/site/apidocs/* temp-docs/
+          else
+            echo "Javadoc not found; skipping deployment"
+            exit 1
+          fi
 
-      - name: Commit and push to gh-pages branch
-        run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
           git switch --orphan gh-pages || git checkout gh-pages
           git rm -rf . > /dev/null 2>&1 || true
-          cp -r docs/* .
+          cp -r temp-docs/* .
           git add .
-          git commit -m "Deploy docs to GitHub Pages" || echo "Nothing to commit"
+          git commit -m "Deploy Javadoc to GitHub Pages" || echo "Nothing to commit"
           git push --force https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} HEAD:gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
